-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9.2, 6.10.0 Beta3
-
None
-
Arch Linux x86_64
AMD Ryzen 7 5700U with Radeon Graphics
-
-
3cc88e0f8 (dev), ac20cd91b (6.10), 22bf04122 (6.10.0)
GPU rendering is not working with mesa 25.2 in 6.10. It does not affect 6.9. Trying to render any web page results in a blank page being displayed, and a long string of
Backend texture is not a Vulkan texture.
Compositor returned null texture
is logged to stdout.
The issue is bisected to the removal of `EGL_MESA_drm_image` in https://gitlab.freedesktop.org/mesa/mesa/-/commit/20590ca771143191ed3d502563a89706dfd1fc6b
- resulted from
-
QTBUG-136257 QtWebEngine based browser shows nothing with panthor driver
-
- Closed
-