fix: escalate GPU workaround straight to software rendering

The intermediate Vulkan fallback (QTWEBENGINE_FORCE_USE_GBM=0) keeps the
process alive but renders corrupted output on some drivers (radv on
RDNA4, QTBUG-139424) — a failure mode the crash sentinel cannot detect,
leaving users stuck on a broken level. Auto-escalation now lands
directly on level 2 (--disable-gpu), which is safe by construction;
level 1 remains available as a manual pin. A level 1 persisted by the
v0.20.17 ladder is migrated to 2 on the next launch.